<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF02414A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/farro_bold"
        android:text="Shared Preferences"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutEntero"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNumEntero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresa_un_numero_entero"
                    android:fontFamily="@font/farro"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtValorEntero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/farro"
                android:textSize="16sp"
                android:text="@string/valor_entero"
                app:layout_constraintEnd_toEndOf="@+id/txtLayoutEntero"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/txtLayoutEntero"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutEntero" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutTexto"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/txtValorEntero"
                app:layout_constraintStart_toStartOf="@+id/txtValorEntero"
                app:layout_constraintTop_toBottomOf="@+id/txtValorEntero">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextoIngresado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farro"
                    android:hint="@string/ingresa_un_texto" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtTextoIngresado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/farro"
                android:text="@string/texto"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutTexto" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtSwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.194"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/farro"
                android:text="@string/estado_del_switch"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toEndOf="@+id/switch1"
                app:layout_constraintTop_toBottomOf="@+id/txtTextoIngresado" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutDecimal"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="@+id/txtLayoutTexto"
                app:layout_constraintStart_toStartOf="@+id/txtLayoutTexto"
                app:layout_constraintTop_toBottomOf="@+id/txtTextoIngresado">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNumDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/farro"
                    android:hint="@string/ingresa_un_numero_decimal"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtDecimalIngresado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/farro"
                android:text="@string/valor_decimal"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/txtLayoutDecimal"
                app:layout_constraintStart_toStartOf="@+id/txtLayoutDecimal"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutDecimal" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#977D7D7D"
                android:fontFamily="@font/farro"
                android:text="@string/borrar"
                android:textColor="@color/white"
                android:textSize="16sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDecimalIngresado"
                app:layout_constraintVertical_bias="0.25" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#02414A"
                android:fontFamily="@font/farro"
                android:text="@string/guardar"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDecimalIngresado"
                app:layout_constraintVertical_bias="0.25" />

            <Button
                android:id="@+id/btnMostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF02414A"
                android:fontFamily="@font/farro"
                android:text="@string/mostrar_datos_guardados"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDecimalIngresado"
                app:layout_constraintVertical_bias="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>